[package]
name = "argon2hash"
description = "A simple CLI tool to hash passwords using Argon2"
authors = ["Richard Neumann <neumann@paulmann.de>"]
repository = "https://github.com/PaulmannLighting/argon2hash"
keywords = ["argon2", "hash", "password"]
categories = ["command-line-utilities"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
clap-stdin = "0.4"
env_logger = "0.11"
log = "0.4"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
